--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "typescript": "^5.8.3"
   },
